<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/appSwitcher"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="500dp"
    android:orientation="horizontal"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lastUsedAppsTitle"
            style="@style/AppSwitcherTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/last_used" />

        <LinearLayout
            android:id="@+id/lastUsedApps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="14dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" />
    </LinearLayout>

    <ImageView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:background="@color/line_shadow" />

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_marginTop="30dp" >

        <TextView
            android:id="@+id/mostUsedAppsTitle"
            style="@style/AppSwitcherTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text="@string/most_used" />

        <TextView
            android:id="@+id/mostUsedAppsOOBEDescription"
            style="@style/AppSwitcherSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/no_apps_have_been_opened_yet"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/mostUsedApps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="14dp"
            android:orientation="vertical" />
    </LinearLayout>
</LinearLayout>
